--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,10 @@ table input[type='number'] {
   background-color: #f27471;
 }
 
+.btn-create {
+  background-color: lightgray;
+}
+
 h1,
 h2,
 .calculate-total {
